# Atomos-Digitais-I2A2

./: .gitignore  README.md
Agent_Analista_de_excel/: README.md  main.py  requirements.txt
Agent_Analista_de_excel/src/: app.py  mcp_server.py
Agent_Analista_de_excel/src/Pasta_temporaria_excel/: Dados_São_Luis.xlsx  Dados_teste_Hanseníase (1).xlsx
Controle_VR_bases/: .env.example  ANALISE_CONFORMIDADE.md  DIAGRAMA_ARQUITETURA.md  IMPLEMENTACAO_BANCO_DADOS.md  README.md  README_AI_AGENT.md  README_IMPLEMENTACAO_COMPLETA.md  RELATORIO_TECNICO.md  TESTES_README.md  VR_2025_09_Processado.xlsx  iniciar_web.bat  requirements.txt  run_all_tests.sh  test.db  test_db_initialization.py  test_fixed_clear_all.py  test_real_data.py  test_real_data_fixed.py  test_table_missing.py  test_vr_agent_simulation.py  vr_ai_agent.py  vr_ai_web.py  vr_bot - Copia.py  vr_bot.py  vr_web.py
Controle_VR_bases/dados/: Admissoes.xlsx  Afastados.xlsx  Aprendiz.xlsx  Ativos.xlsx  Desligados.xlsx  Dias_Uteis.xlsx  Estagio.xlsx  Exterior.xlsx  Ferias.xlsx  Sindicatos.xlsx
Controle_VR_bases/data/: vr_database.db
Controle_VR_bases/output/: VR_2025_09_Processado.xlsx
Controle_VR_bases/src/: mcp_server.py  vr_agent.py  web_interface.py
Controle_VR_bases/src/ai_service/: __init__.py  openai_service.py
Controle_VR_bases/src/calculator/: __init__.py  vr_calculator.py
Controle_VR_bases/src/config/: __init__.py  settings.py
Controle_VR_bases/src/data_loader/: __init__.py  excel_loader.py
Controle_VR_bases/src/database/: db_manager.py
Controle_VR_bases/src/report_generator/: __init__.py  excel_generator.py  vr_final_generator.py
Controle_VR_bases/src/validator/: __init__.py  data_validator.py
agent_csv_analyzer/: README.md  mcp_server.py  requirements.txt  teste.py
auditor_fiscal/: 0_Inicio.py  README.md  app.py  pyproject.toml  requirements.txt
auditor_fiscal/data/templates/: nota-com-rejeicoes.xml
auditor_fiscal/pages/: 1_🏠_Dashboard.py  2_📋_Notas.py  3_📤_Documentos.py  4_🔍_Análise_IA.py  6_⚙️_Configurações.py
auditor_fiscal/src/: __init__.py
auditor_fiscal/src/ai_service/: analysis_schema.py  data_analyzer.py  fiscal_analyzer.py  fiscal_analyzer_v2.py
auditor_fiscal/src/config/: __init__.py  config_persistence.py
auditor_fiscal/src/data_loader/: __init__.py  nfe_xml_parser.py  nfe_xml_processor.py
auditor_fiscal_projeto_final/.streamlit/: config.toml
auditor_fiscal_projeto_final/pages/: 5_📊_Relatórios.py
outros_desafios/agent_csv_analyzer/: app.py  db_utils.py  requirements.txt
outros_desafios/controle_vr_bases/: .gitignore  README.md  main.py  pyproject.toml
outros_desafios/controle_vr_bases/src/: vr_automation_main.py
outros_desafios/controle_vr_bases/src/calculator/: holiday_calendar.py  vr_calculator.py
outros_desafios/controle_vr_bases/src/data_loader/: excel_loader.py
outros_desafios/controle_vr_bases/src/database/: __init__.py
outros_desafios/controle_vr_bases/src/validator/: data_validator.py
(+26 files in other folders)
